<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="fr.rsommerard.gsmanalyzer.MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/txtvw_network_operator_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_operator_name" />

        <TextView
            android:id="@+id/txtvw_network_type_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/network_type_name" />

        <TextView
            android:id="@+id/txtvw_signal_level_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signal_level_name" />

        <TextView
            android:id="@+id/txtvw_dbm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dbm" />

        <TextView
            android:id="@+id/txtvw_asu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asu" />

        <TextView
            android:id="@+id/txtvw_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_analyze"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/analyze" />
</LinearLayout>
